--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-ิbody {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*body {
     margin: 0px;
     font-family: -apple-system, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -6,4 +10,4 @@
     height: 100vh;
     background: linear-gradient(#2A00B7,#42006C);
 
-}
+} */
